--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,11 @@
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
+
+/* Basic Setup */
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -14,25 +22,21 @@ html {
 }
 
 
-/* .row {
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
+
+/* Reusable Components */
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
+.row {
     max-width: 1140px;
     margin: 0 auto;
-} */
-
-header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
 }
 
-.hero-text-box {
-    position: absolute;
-    width: 1140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+
+/* ----------------------Headings----------------------------------- */
 
 h1 {
     margin-top: 0;
@@ -44,6 +48,9 @@ h1 {
     letter-spacing: 1px;
     word-spacing: 4px;
 }
+
+
+/* ----------------------Buttons----------------------------------- */
 
 
 /* btn e 4 state >> link,visited,hover,active
@@ -91,4 +98,62 @@ active>>>>> after click kemn dekhabe */
 .btn-ghost:active {
     border: 1px solid #cf6d17;
     color: #fff;
+}
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
+
+/* Header */
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- */
+
+header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.hero-text-box {
+    position: absolute;
+    width: 1140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 55px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #e67e22;
 }
