--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,6 @@
-/* ----------------------------------------------------------------------------------------------------------------------- */
-
-
-/* Basic Setup */
-
-
-/* ----------------------------------------------------------------------------------------------------------------------- */
+/* -----------------------------------------------------------------------------------------------------------------------
+                         Basic Setup
+----------------------------------------------------------------------------------------------------------------------- */
 
 * {
     margin: 0;
@@ -22,13 +18,9 @@ html {
 }
 
 
-/* ----------------------------------------------------------------------------------------------------------------------- */
-
-
-/* Reusable Components */
-
-
-/* ----------------------------------------------------------------------------------------------------------------------- */
+/* -----------------------------------------------------------------------------------------------------------------------
+                        Reusable Components
+----------------------------------------------------------------------------------------------------------------------- */
 
 .row {
     max-width: 1140px;
@@ -165,13 +157,9 @@ active>>>>> after click kemn dekhabe */
 }
 
 
-/* ----------------------------------------------------------------------------------------------------------------------- */
-
-
-/* Header */
-
-
-/* ----------------------------------------------------------------------------------------------------------------------- */
+/* ----------------------------------------------------------------------------------------------------------------------- 
+                   Header 
+----------------------------------------------------------------------------------------------------------------------- */
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
@@ -220,4 +208,30 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
+}
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- 
+                 Meals 
+----------------------------------------------------------------------------------------------------------------------- */
+
+.meals-showcase {
+    list-style: none;
+    width: 100%;
+}
+
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.meal-photo {
+    width: 100%;
+    margin: 0;
+}
+
+.meal-photo img {
+    width: 100%;
+    height: auto;
 }
