--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -159,7 +159,8 @@ hover>>>> mouse pointer button er upor nie gele kemn dekhabe
 active>>>>> after click kemn dekhabe */
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -169,7 +170,8 @@ active>>>>> after click kemn dekhabe */
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -183,7 +185,9 @@ active>>>>> after click kemn dekhabe */
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #cf6d17;
     /* color: #fff; */
 }
@@ -472,4 +476,36 @@ cite img {
 
 .plan-box ul li {
     padding: 5px 0;
+}
+
+
+/* ----------------------------------------------------------------------------------------------------------------------- 
+                 Contact us form
+----------------------------------------------------------------------------------------------------------------------- */
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {
+    outline: none;
 }
