--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -113,4 +113,11 @@
 
 /* Small phones : from 0 to 480px */
 
-@media only screen and (max-width: 480px) {}
+@media only screen and (max-width: 480px) {
+    section {
+        padding: 25px 0;
+    }
+    .contact-form {
+        width: 100%;
+    }
+}
