sticky navigation - jQuery

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -261,9 +261,10 @@ active>>>>> after click kemn dekhabe */
                 width: 100%;
                 background-color: rgba(255, 255, 255, 0.97);
                 box-shadow: 0 2px 2px #fefefe;
+                z-index: 9999;
             }
             
-            .main-nav {
+            .sticky .main-nav {
                 margin-top: 18px;
             }
             
