--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -252,6 +252,19 @@ active>>>>> after click kemn dekhabe */
             .main-nav li a:active {
                 border-bottom: 2px solid #e67e22;
             }
+            /*********** Mobile Navi *********************/
+            
+            .mobile-nav-icon {
+                float: right;
+                margin-top: 30px;
+                cursor: pointer;
+                display: none;
+            }
+            
+            .mobile-nav-icon i {
+                font-size: 200%;
+                color: #fff;
+            }
             /*********** Sticky Navi *********************/
             
             .sticky {
